issue#131minyawns selected image aligned

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -3025,13 +3025,12 @@ margin: auto;
 	margin: auto;
 	position: absolute;
 	text-align: center;
-	top: 2%;
 	width: 80px;
 	i {
 		display: block;
 		font-size: 19px;
 		text-align: center;
-		margin-top: 21px;
+		/*margin-top: 21px;*/
 		}
 }
 
@@ -7677,6 +7676,13 @@ body .job-view-list{
 							-webkit-border-radius: 100%;
 							border: 3px solid #8ed030;
 							display:inline-block;
+								@media screen and (max-width:321px){
+									.minaywns-sel{
+										width:70px;
+										height:70px;
+									}
+									
+								}
 						img{
 							width: 80px;
 							height: 80px;
@@ -7691,6 +7697,7 @@ body .job-view-list{
 										width:70px;
 										height:70px;
 									}
+
 								}
 						}
 					}
